--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,16 @@ html, body {
   max-width: 100%;
 }
 
+/* Font Display Optimization */
+@font-face {
+  font-family: 'Font Awesome 6 Free';
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Font Awesome 6 Brands';
+  font-display: swap;
+}
 
 /* Base Styles */
 :root {
